docs/grammar.txt
program        → declaration* EOF ;

declaration    → riverDecl
               | damDecl
               | levelStmt
               | letDecl
               | drainStmt
               | outputStmt
               | daysStmt ;

riverDecl      → "river" IDENT ( "=" NUMBER )? ";" ;
damDecl        → "dam" IDENT ( "=" damAlg )? ";" ;
damAlg         → NUMBER
               | IDENT "(" argList? ")" ;
argList        → expression ( "," expression )* ;
levelStmt      → "level" IDENT "=" expression ";" ;
letDecl        → "let" IDENT "=" expression ";" ;
drainStmt      → IDENT "->" IDENT ";" ;
outputStmt     → "output" IDENT ";" ;
daysStmt       → "days" expression ";" ;

expression     → addition ;
addition       → primary ( "+" primary )* ;
primary        → IDENT | NUMBER | "(" expression ")" | rainLit ;
rainLit        → "rain" "(" NUMBER "mm" ")" ;
comment        → "//" <chars until end> | "/*" <chars until "*/"> ;
